# orangepi_rknn

./: .dockerignore  .gitignore  Dockerfile  ILSVRC2012_val_250.txt  main.py  pyproject.toml  resnet18_fp16.py  resnet18_ptq.py  weights.yaml
models/: deeplabv3.py  efficientnet.py  fcn.py  model.py  resnet.py  resnet18.py  yolov5.py  yolov8.py
